<resources>
    <string name="app_name">Questify</string>
    <string name="home_header">Quests</string>
    <string name="profile_header">Profile</string>
    <string-array name="quest_categories">
        <item>Physical</item>
        <item>Digital</item>
        <item>Professional</item>
        <item>Creative</item>
    </string-array>
    <string-array name="date_categories">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="background_image_desc">Background Image</string>
    <string name="sign_in_google">Sign In with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_cash_in_amount">Input Cash In Amount</string>
    <string name="current_wallet_balance_480_10">Current wallet balance: ₱480.10</string>
    <string name="_100">100</string>
    <string name="_500">500</string>
    <string name="_1000">1000</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="confirm">Confirm</string>
    <string name="close_the_dialog">Close the dialog</string>
    <string name="cash_in">Cash In</string>
    <string name="withdraw">Withdraw</string>
    <string name="input_withdraw_amount">Input Withdraw Amount</string>
    <string name="token">Token</string>
    <string name="verify">Verify</string>
    <string name="enter_verification_token">Enter verification token</string>
</resources>