<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/sign_up_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Sign Up Text -->

    <!-- Username Input Field -->

    <!-- Password Input Field -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="176dp"
        android:fontFamily="@font/actor_regular"
        android:text="Sign In"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="354dp"
        android:layout_height="62dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/input_field_background"
        android:backgroundTint="#EDEDED"
        android:elevation="4dp"
        android:fontFamily="@font/actor_regular"
        android:hint="@string/username"
        android:padding="10dp"
        android:textColor="#5B5F97"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="352dp"
        android:layout_height="66dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_field_background"
        android:backgroundTint="#EDEDED"
        android:elevation="4dp"
        android:fontFamily="@font/actor_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#5B5F97"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername" />


    <!-- Sign in Button -->
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/actor_regular"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/sign_in"
        android:textColor="#5B5F97"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />



    <!-- Don't have an account? Sign Up Text Container -->
    <LinearLayout
        android:id="@+id/dontHaveAccountContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dontHaveAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/actor_regular"
            android:text="Don't have an account?"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/actor_regular"
            android:text=" Sign Up"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>